cabal-version:       2.4
name:                webgear-example-hello
version:             0.2.1
description:         Please see the README at <https://github.com/haskell-webgear/webgear-example-hello#readme>
homepage:            https://github.com/haskell-webgear/webgear-example-hello#readme
bug-reports:         https://github.com/haskell-webgear/webgear-example-hello/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear-example-hello

executable hello
  default-language:   Haskell2010
  build-depends:      base                  >=4.12.0.0 && <5
                    , http-types            ==0.12.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  main-is:            Main.hs
  hs-source-dirs:     src

